--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.firebase:firebase-firestore:24.0.1'
     testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+    androidTestImplementation 'com.jayway.android.robotium:robotium-solo:5.3.1'
+
 }
