--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         <activity
+            android:name=".GenerateCOde"
+            android:exported="false" />
+        <activity
             android:name=".SignupActivity"
             android:exported="true" />
         <activity
@@ -64,14 +67,13 @@
         <activity
             android:name=".SigninActivity"
             android:exported="false" />
-
         <activity
             android:name=".ScanActivity"
             android:screenOrientation="fullSensor"
             android:stateNotNeeded="true"
             android:windowSoftInputMode="stateAlwaysHidden" />
-        <activity android:name=".UserProfile"/>
-        <activity android:name=".UserCode"/>
+        <activity android:name=".UserProfile" />
+        <activity android:name=".UserCode" />
     </application>
 
 </manifest>
