--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
+        targetSdkVersion 32
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -47,6 +48,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
     androidTestImplementation 'com.jayway.android.robotium:robotium-solo:5.3.1'
-    
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.android.volley:volley:1.2.1'
 
 }
