--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyDF9zT-E6vzPGQwZniAVk5BFx30Jczg5bg" />
 
         <activity
             android:name=".MapDemo2"
